fix: [RateActions] Reduce .RateActions' z-index

--- a/src/styles/var.less
+++ b/src/styles/var.less
@@ -300,10 +300,11 @@
 @zindex-toast: 200;
 @zindex-tooltip: 200;
 @zindex-recorder-toast: 100;
-@zindex-rate-actions: @zindex-modal;
+
 @zindex-navbar: 10;
 @zindex-footer: 10;
 @zindex-quick-replies: 110;
+@zindex-rate-actions: 10;
 @zindex-notice: 30;
 
 @zindex-input-counter: 1;
